tests/baselines/reference/parserRegularExpression1.errors.txt
==== tests/cases/compiler/parserRegularExpression1.ts (1 errors) ====
    return /(#?-?\d*\.\d\w*%?)|(@?#?[\w-?]+%?)/g;
    ~~~~~~
!!! parserRegularExpression1.ts(1,1): error TS1108: 'return' statement must be contained within a function body.